--- a/examples/path-planner-3d/package.json
+++ b/examples/path-planner-3d/package.json
@@ -21,12 +21,15 @@
     "@foxglove/schemas": "1.6.4",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
+    "@types/three": "^0.169.0",
     "create-foxglove-extension": "1.0.4",
     "eslint": "9.15.0",
     "prettier": "3.3.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "typescript": "5.7.2"
+  },
+  "dependencies": {
+    "three": "^0.158.0"
   }
 }
-
